2006-06-17  Graydon Hoare  <graydon@pobox.com>

	* Makefile.am: Permit building 'tester' with static boost.

2006-06-17  Derek Scherger  <derek@echologic.com>

	* testsuite.lua: fix references to renamed tests
	
2006-06-17  Derek Scherger  <derek@echologic.com>

	* tests/README: add a couple of notes on where to find test logs
	
2006-06-17  Derek Scherger  <derek@echologic.com>

	* tests/'heads':
	* tests/heads:
	* tests/'heads'_with_discontinuous_branches:
	* tests/heads_with_discontinuous_branches:
	* tests/trust_hooks_and_'trusted'_command:
	* tests/trust_hooks_and_trusted_command:
	rename tests to play nicer with find and xargs
	
2006-06-17  Derek Scherger  <derek@echologic.com>

	* tests/ls_unknown_of_unknown_subdir: new xfail test
	* testsuite.lua: insert in tests table
	
2006-06-17  Timothy Brownawell  <tbrownaw@gmail.com>

	* cmd.hh, commands.cc: Modify how command parameters description
	strings are handled.
	* cmd_automate.cc, cmd.hh: Use this to make the parameters for
	each automate subcommand be a parameter of the ATUOMATE() macro,
	instead of all being a big block in the automate command.
	* automate.cc, cmd_list.cc, cmd_automate.cc: Update AUTOMATE() usage.

2006-06-18  Richard Levitte  <richard@levitte.org>

	* po/sv.po: One new untranslated string and a couple of fuzzies.

2006-06-17  Nathaniel Smith  <njs@pobox.com>

	* configure.ac, debian/changelog, monotone.spec:
	* win32/monotone.iss, NEWS, UPGRADE: Bump version numbers to
	0.27.

2006-06-17  Timothy Brownawell  <tbrownaw@gmail.com>

	(see bug #15995, asking for a more comprehensive automate command set)
	Start splitting up automate.cc . There is now an AUTOMATE() macro in
	cmd.hh , similar to the CMD() macro. Individual automate commands can
	share a file with similar command-line commands, and many commands can
	be factored into an implementation with CMD() and AUTOMATE() wrappers
	to format input/output.
	* cmd.hh: Add stuff needed to define a new automate command.